# linkedin-mcp-pro-max

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.a0proj/: project.json
.agents/rules/: architecture-patterns.md  coding-standards.md  config-path-rules.md  config-usage-rules.md  maintenance-testing.md  project-config-example.md  project-tree-example.md
docs/: develop_new_tool.md
scripts/: check_model_usage.py  setup.sh  tree_structure.py
src/: app.py  cli.py
src/api/: __init__.py  executor.py  linkedin.py
src/api/helpers/: __init__.py  rate_limiter.py
src/browser/: __init__.py  manager.py  session.py
src/browser/actors/: README.md  auth.py  interactor.py  profile_editor.py
src/browser/helpers/: __init__.py  dom.py  driver.py  executor.py  sniffer.py  trace.py
src/browser/scrapers/: README.md  community.py  company.py  feed.py  jobs.py  messaging.py  network.py  notifications.py  profile.py  search.py
src/config/: __init__.py  dotenv.py  files.py  logger.py  paths.py  prompts.py  settings.py
src/db/: __init__.py  database.py  tables.py
src/db/categories/: __init__.py  base.py
src/db/categories/billing/: __init__.py  invoice.py  subscription.py  usage.py
src/db/categories/core/: __init__.py  plan.py  tenant.py  user.py
src/db/categories/crm/: __init__.py  activity.py  company.py  job_posting.py  lead.py
src/db/categories/engine/: __init__.py  account.py  event.py  profile_global.py  profile_link.py
src/db/categories/mcp/: __init__.py  api_key.py  session.py  tool_call.py
src/helpers/: __init__.py  exceptions.py  registry.py
src/providers/: __init__.py  base.py  claude.py  ensemble.py  factory.py  image.py  linkedin.py  openai.py
src/providers/helpers/: __init__.py  rate_limiter.py
src/schema/: README.md  __init__.py  common.py  core.py  document.py  jobs.py  models.py  profile.py  session.py  tracker.py
src/services/: README.md  __init__.py  auth.py  content.py  cover_letter.py  jobs.py  profile.py  profile_analyzer.py  resume.py  template.py  tenant.py  tracker.py  user.py
src/services/helpers/: __init__.py  cache.py  converter.py  mapping.py
src/templates/cover_letter/: concise.j2  professional.j2
src/templates/resume/: minimal.j2  modern.j2  professional.j2
src/tools/: __init__.py  content.py  jobs.py  network.py  profiles.py  prompts.py  resources.py  resume.py  system.py  tracker.py
tests/: conftest.py  test_discovery.py  test_profile_tool.py  test_resume_tool.py
tests/db/: test_integration.py
tests/services/: test_user_service.py
(+15 files in other folders)
